Optimize nsSegmentEncoder to not get an mEncoder unless it actually has encoding to do (has a non-ascii spec segment).  Bug 212475, r=darin, sr=dbaron